--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ MySQL-python
 PIL
 requests
 BeautifulSoup
-django-tastypie==0.9.13-beta
+django-tastypie==0.9.13
 kombu==2.4.3
 celery==3.0.7
 django-celery==3.0.11
@@ -29,3 +29,13 @@ django-pipeline==1.3.6
 git+https://github.com/eldarion/idios.git
 git+https://github.com/fay/pinax-theme-bootstrap
 django-social-auth
+django-guardian
+django-fluent-comments
+git+https://github.com/eldarion/agon
+raven
+django-endless-pagination
+gravatar
+django-notifications-hq==0.6.0
+django-pagination==1.0.7
+kaleo==1.1
+django-gravatar==0.1.0
