--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,6 @@ requests
 BeautifulSoup
 django-tastypie==0.9.13
 kombu==2.4.3
-celery==3.0.7
-django-celery==3.0.11
-django-celery-email==1.0.1
 django-positions==0.4.3
 git+https://github.com/fay/jieba
 yuicompressor
@@ -43,3 +40,8 @@ south==0.8.2
 django-avatar==2.0a10
 django-xadmin==0.4.0
 django-reversion==1.7.1
+celery==3.0.24
+celery-with-redis==3.0
+django-celery==3.0.11
+django-celery-email==1.0.1
+celery-with-redis==3.0
