--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ yuicompressor
 django-pipeline==1.3.6
 git+https://github.com/eldarion/idios.git
 git+https://github.com/fay/pinax-theme-bootstrap
-django-social-auth
+git+https://github.com/fay/django-social-auth
 django-guardian
 django-fluent-comments
 git+https://github.com/eldarion/agon
