--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,8 @@ django-tagging
 MySQL-python
 PIL
 requests
-BeautifulSoup
+#### snapshot need 3.2.0 because of html entitie, like `>` will be &gt.
+BeautifulSoup==3.2.0
 django-tastypie==0.9.13
 kombu==2.4.3
 django-positions==0.4.3
