--- a/requirements.txt
+++ b/requirements.txt
@@ -48,3 +48,5 @@ django-celery-email==1.0.1
 pyelasticsearch==0.6.1
 django-haystack==2.1.0
 sorl-thumbnail==11.09
+#: there will be a tagging module conflict, delete the emencia.django.newsletter dependant tagging
+emencia.django.newsletter==0.2
