--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,6 @@ kombu==2.4.3
 django-positions==0.4.3
 git+https://github.com/fay/jieba
 yuicompressor
-django-pipeline==1.3.6
 git+https://github.com/eldarion/idios.git
 git+https://github.com/fay/pinax-theme-bootstrap
 git+https://github.com/fay/django-social-auth
@@ -52,3 +51,5 @@ sorl-thumbnail==11.09
 emencia.django.newsletter==0.2
 phileo==1.1
 django-follow==0.6.1
+django-compressor==1.4
+
